# walletconnect-client

./: Cargo.toml  README.md
src/: auth.rs  cipher.rs  domain.rs  event.rs  jwt.rs  lib.rs  macros.rs  metadata.rs  prelude.rs  serde_helpers.rs  utils.rs  watch.rs
src/rpc/: batch.rs  constants.rs  error.rs  fetch.rs  mod.rs  msgid.rs  params.rs  payload.rs  publish.rs  request.rs  response.rs  rpc_response.rs  session.rs  subscribe.rs  subscription.rs  watch.rs
